# SimpleATM

./: CMakeLists.txt  Manual.md  README.md  main.cpp
include/: account.hpp  atm.hpp  bank.hpp
src/: account.cpp  atm.cpp  bank.cpp
